frontend/deploy/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: banias-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
        app: banias-frontend
  template:
      metadata:
        labels:
          app: banias-frontend
          k8s-app: banias-frontend
      spec:
        containers:
        - name: "banias-frontend"
          image: "gcr.io/aviv-playground/banias-frontend:test"
          volumeMounts:
          - name: google-cloud-key
            mountPath: /var/secrets/google
          ports:
          - name: http
            containerPort: 8081
          - name: prom-metrics
            containerPort: 8080
          imagePullPolicy: Always
        volumes:
          - name: google-cloud-key
            secret:
              secretName: pubsub-key
