frontend/deploy/frontend-monitor-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: banias-monitor-service
  labels:
    k8s-app: banias-frontend
spec:
  ports:
  - name: prom-metrics
    port: 8080
    protocol: TCP
  selector:
    k8s-app: banias-frontend
