frontend/deploy/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: banias-frontend
  labels:
    app: banias-frontend
spec:
  type: LoadBalancer
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8081
  selector:
    app: banias-frontend
