frontend/deploy/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: banias-ingress
spec:
  backend:
    serviceName: banias-frontend
    servicePort: 8081
